[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "purchase-reconciliation"
version = "1.0.0"
description = "采购对账申诉与回滚 CLI 工具"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0",
    "python-dateutil>=2.8",
    "tabulate>=0.9.0"
]

[project.scripts]
purchase-recon = "purchase_reconciliation.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]